Modificaciones. CSS para slide

--- a/Practica 1/index.css
+++ b/Practica 1/index.css
@@ -40,7 +40,7 @@ body{
   color: #000066;
 }
 
-#foto1{
+/*#foto1{
     position: relative;
     text-align: center;
 }
@@ -69,7 +69,8 @@ body{
   top: 70%;
   left: 40%;
   transform: translate(-50%, -50%);
-}
+}*/
+
 
 .log-in{
   width=40%;
