--- a/Practica 1/actividades.css
+++ b/Practica 1/actividades.css
@@ -1,11 +1,81 @@
-.flex{
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  flex-flow: row wrap;
-  text-align: center;
+@font-face {
+    font-family: Fuente1;
+    src: url('./Fonts/ostrichroundedwebfont.woff');
+    font-weight: bold;
 }
 
-.actividades{
+@font-face {
+  font-family: Fuente2;
+  src:url('./Fonts/SansationLight.woff');
+}
+
+@font-face {
+  font-family: Fuente3;
+  src:url('./Fonts/JustusItalic.woff');
+}
+
+.cuerpo{
+  display: flex;
+  height: 500px;
+  width: 1600px;
+}
+
+h2{
+  font-weight: bold;
+  font-size: 100;
+}
+
+.split-left{
+  font-family: Fuente2;
+  flex-direction: column;
+  justify-content: center;
+  flex:1;
+  padding: 1rem;
   overflow: scroll;
+
+}
+
+.split-right{
+  font-family: Fuente3;
+  background: lightblue url("back.jpg");
+  flex-direction: column;
+  justify-content: right;
+  flex:1;
+  padding: 1rem;
+}
+
+.centered{
+  border: 2px solid #ccc;
+  background-color: #eee;
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px 0
+}
+
+.centered::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.centered img {
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.centered span {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+@media (max-width: 500px) {
+  .centered {
+      text-align: center;
+  }
+  .centered img {
+      margin: auto;
+      float: none;
+      display: block;
+  }
 }
