--- a/Practica 1/formulario.css
+++ b/Practica 1/formulario.css
@@ -10,6 +10,10 @@ body{
   font-family: Fuente2;
 }
 
+form{
+  background-color: #05AEFF;
+}
+
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
