Últimos retoques y foro

--- a/Practica 1/actividades.css
+++ b/Practica 1/actividades.css
@@ -36,7 +36,7 @@ h2{
 
 .split-right{
   background-image: url(back.jpg);
-  background-repeat:no-repeat
+  background-repeat:no-repeat;
   background-position:center;
   font-family: Fuente3;
   flex-direction: column;
