Imágenes a su carpeta y adaptación

--- a/Practica 1/actividades.css
+++ b/Practica 1/actividades.css
@@ -35,7 +35,7 @@ h2{
 }
 
 .split-right{
-  background-image: url(back.jpg);
+  background-image: url(imagenes/back.jpg);
   background-repeat:no-repeat;
   background-position:center;
   font-family: Fuente3;
