--- a/Practica 1/localizacion.css
+++ b/Practica 1/localizacion.css
@@ -18,6 +18,6 @@ iframe{
 }
 
 body{
-  background-image: url(back4_opt.jpg);
+  background-image: url(imagenes/back4_opt.jpg);
   background-repeat: no-repeat;
 }
