Header responsive, menú responsive en actividades

--- a/Practica 1/formulario.css
+++ b/Practica 1/formulario.css
@@ -101,3 +101,21 @@ input[type=submit]:hover {
         margin-top: 0;
     }
 }
+
+@media (max-width:720px) {
+  h2{
+    font-size: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo img{
+    margin: auto;
+    float: none;
+    display: block;
+  }
+
+  .titulo{
+    font-size: 50%;
+  }
+}
