--- a/Practica 1/foro.css
+++ b/Practica 1/foro.css
@@ -94,3 +94,22 @@ body{
   display: inline-block;
   vertical-align: top;
 }
+
+
+@media (max-width:720px) {
+  h2{
+    font-size: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo img{
+    margin: auto;
+    float: none;
+    display: block;
+  }
+
+  .titulo{
+    font-size: 50%;
+  }
+}
