--- a/Practica 1/localizacion.css
+++ b/Practica 1/localizacion.css
@@ -21,3 +21,21 @@ body{
   background-image: url(imagenes/back4_opt.jpg);
   background-repeat: no-repeat;
 }
+
+@media (max-width:720px) {
+  h2{
+    font-size: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo img{
+    margin: auto;
+    float: none;
+    display: block;
+  }
+
+  .titulo{
+    font-size: 50%;
+  }
+}
