--- a/Practica 1/pregunta1.css
+++ b/Practica 1/pregunta1.css
@@ -78,3 +78,22 @@ body{
   width:70%;
   margin: 0;
 }
+
+
+@media (max-width:720px) {
+  h2{
+    font-size: 80%;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo img{
+    margin: auto;
+    float: none;
+    display: block;
+  }
+
+  .titulo{
+    font-size: 50%;
+  }
+}
