Cambios en los css

--- a/Practica 1/localizacion.css
+++ b/Practica 1/localizacion.css
@@ -18,7 +18,7 @@ iframe{
 }
 
 body{
-  background-image: url(imagenes/back4_opt.jpg);
+  background-image: url("./imagenes/back4_opt.jpg");
   background-repeat: no-repeat;
 }
 
